--- a/privacy.html
+++ b/privacy.html
@@ -147,6 +147,7 @@
 
   <script src="/js/ldjson-loader.js"></script>
   <script src="/js/canonical-loader.js"></script>
+  <script src="/js/bootstrap-scripts.js"></script>
   <img src="/assets/privacy-icon.png" alt="Privacy policy icon" class="w-12 h-12 mr-2">
 </body>
 
