--- a/terms.html
+++ b/terms.html
@@ -168,6 +168,7 @@
   </footer>
   <script src="/js/ldjson-loader.js"></script>
   <script src="/js/canonical-loader.js"></script>
+  <script src="/js/bootstrap-scripts.js"></script>
 </body>
 
 </html>
